--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,25 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        os:
+          # linux-64
+          - ubuntu-latest
+          # linux-aarch64
+          - ubuntu-24.04-arm
+          # osx-arm64
+          - macos-latest
+          # osx-64
+          - macos-13
+          # win-64
+          - windows-latest
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      with:
-        fetch-depth: 2
     - uses: prefix-dev/setup-pixi@ba3bb36eb2066252b2363392b7739741bb777659 # v0.8.1
       with:
-        environments: build
         activate-environment: true
     - name: Build packages
       shell: bash
@@ -35,8 +46,8 @@ jobs:
     - name: Upload packages as artifacts
       uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
       with:
-        path: |
-          output/**/*.conda
+        path: output/**/*.conda
+        name: output-${{ matrix.os }}
     - name: Get JWT
       id: get_token
       if: github.event_name == 'push'  # do not upload on PR
