--- a/starship/recipe.yaml
+++ b/starship/recipe.yaml
@@ -20,6 +20,7 @@ tests:
 requirements:
   build:
     - ${{ compiler('rust') }}
+    - ${{ compiler('c') }}
     - cargo-bundle-licenses
   run_exports:
     - starship <0
