--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,11 @@ jobs:
     - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
       with:
         activate-environment: true
+    - name: Install Swift
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install swift
+        swift --version
     - name: Build packages
       shell: bash
       run: |
