--- a/pixi.toml
+++ b/pixi.toml
@@ -1,7 +1,7 @@
-[project]
+[workspace]
 name = "yolo-forge"
 channels = ["conda-forge"]
-platforms = ["linux-64", "linux-aarch64", "win-64", "osx-64", "osx-arm64"]
+platforms = ["linux-64", "linux-aarch64", "win-64", "osx-arm64"]
 
 [feature.build.tasks]
 build = "rattler-build build -c conda-forge -c https://prefix.dev/yolo-forge --recipe "
