--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,12 +25,18 @@ jobs:
           - ubuntu-24.04-arm
           # osx-arm64
           - macos-latest
-          # osx-64
-          - macos-13
           # win-64
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
+    # https://github.com/conda-forge/conda-forge.github.io/issues/2550
+    - name: Install Swift
+      if: matrix.os == 'macos-latest'
+      uses: swift-actions/setup-swift@7ca6abe6b3b0e8b5421b88be48feee39cbf52c6a # v2.4.0
+      with:
+        swift-version: 6.2
+    - run: swift --version
+      if: matrix.os == 'macos-latest'
     - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
     - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
       with:
